--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "drizzle-orm": "^0.32.1",
     "lucide-react": "^0.381.0",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
